# pvm

./: .clang-format  AUTHORS  Makefile.am  Makefile.in  README.md  autogen.sh  configure  configure.ac  main.pbc  meson.build
.github/workflows/: ci.yml
src/: Makefile.am  Makefile.in  code.c  code.h  common.h  config.h.in  function.c  instruction.c  instruction.h  main.c  meson.build  opcode.c  parser.c  parser.h  pool.c  pvm.h  scanner.c  scanner.h  sourceloctable.c  utf8.c  utils.c  utils.h
src/encoding/: meson.build  utf8.c  utf8.h
src/interp/: callstack.c  callstack.h  interpreter.c  interpreter.h  meson.build  primvalue.c  primvalue.h  stack.c  stack.h  stackframe.c  stackframe.h
src/ir/: code.c  code.h  function.c  function.h  instruction.c  instruction.h  meson.build  opcode.c  opcode.h  pool.c  pool.h  sourceloctable.c  sourceloctable.h  type.c  type.h
src/pbc/: byteUtils.c  byteUtils.h  imageStream.c  imageStream.h  pbcFile.h
src/pbcfile/: meson.build  parser.c  parser.h  scanner.c  scanner.h
src/pbcfile/verification/: stackemulator.c  stackemulator.h
src/pilc/: main.c  main.h  meson.build
src/utils/: asprintf.c  asprintf.h  common.h  meson.build  strarray.c  strarray.h  stringbuilder.c  stringbuilder.h  utils.c  utils.h  vasprintf-c99.c
