interpreter_sources = [
    'callstack.c',
    'interpreter.c',
    'interpreterenv.c',
    'primvalue.c',
    'stack.c',
    'stackframe.c',
]

interpreter_inst_headers = [
    'callstack.h',
    'interpreter.h',
    'interpreterenv.h',
    'primvalue.h',
    'stack.h',
    'stackframe.h',
]

interpreter_noinst_headers = []