ir_noinst_headers = []

ir_inst_headers = [
    'code.h',
    'function.h',
    'instruction.h',
    'opcode.h',
    'pool.h',
    'sourceloctable.h',
    'type.h',
]

ir_sources = [
    'code.c',
    'function.c',
    'instruction.c',
    'opcode.c',
    'pool.c',
    'sourceloctable.c',
    'type.c',
]